[gd_scene load_steps=2 format=2]

[ext_resource path="res://NFT/RestorePurchase.gd" type="Script" id=1]

[node name="Control" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 352.0
margin_top = 232.0
margin_right = 652.0
margin_bottom = 412.0
rect_min_size = Vector2( 300, 105 )
rect_scale = Vector2( 2, 2 )
dialog_text = "Please check your NFT Wallet Address:"

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 22.0
margin_right = 292.0
margin_bottom = 144.0

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationDialog/VBoxContainer"]
margin_right = 284.0

[node name="wallet_addr" type="LineEdit" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 4.0
margin_right = 284.0
margin_bottom = 28.0
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label" type="Label" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 32.0
margin_right = 284.0
margin_bottom = 46.0
text = "Please enter NFT Token ID:"

[node name="token_id" type="LineEdit" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 50.0
margin_right = 284.0
margin_bottom = 74.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 78.0
margin_right = 284.0
margin_bottom = 92.0
text = "Please enter NFT asset contract address:"

[node name="contract_addr" type="LineEdit" parent="ConfirmationDialog/VBoxContainer"]
margin_top = 96.0
margin_right = 284.0
margin_bottom = 120.0
caret_blink = true
caret_blink_speed = 0.5

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
rect_scale = Vector2( 2, 2 )

[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
